--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,7 +7,7 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: "Varela Round", sans-serif;
+  font-family: "Varela Round", sans-serif !important;
   overflow: hidden;
 
   color: white;
